margin-top fix for spacing in btwn growing up and faith section

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ aside {
 
 .faith {
     background-color: #5CDB95;
-    margin-top: -45px;
+    margin-top: 0px;
     margin-bottom: 0px;
     font-size: 45px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
